// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard It should render the component correctly 1`] = `
<DocumentFragment>
  <div
    class="productCard undefined"
  >
    <h1>
      Product Card
    </h1>
  </div>
</DocumentFragment>
`;

exports[`ProductCard should increase the counter 1`] = `
<DocumentFragment>
  <div
    class="productCard undefined"
  >
    <h1>
      Product Card
    </h1>
    <span>
      0
    </span>
    <button />
  </div>
</DocumentFragment>
`;
